--- a/locale/fr/foreman_setup.po
+++ b/locale/fr/foreman_setup.po
@@ -7,67 +7,68 @@
 # Pierre-Emmanuel Dutang <dutangp@gmail.com>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 7.0.0\n"
+"Project-Id-Version: foreman_setup 8.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2017-09-20 10:08+0000\n"
-"Last-Translator: Claer <transiblu@claer.hammock.fr>\n"
+"PO-Revision-Date: 2014-08-20 08:30+0000\n"
+"Last-Translator: Claer <transiblu@claer.hammock.fr>, 2014,2016\n"
 "Language-Team: French (http://www.transifex.com/foreman/foreman/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 100000"
+"0 == 0 ? 1 : 2;\n"
 
 msgid "Activation key"
 msgstr "Clé d'activation"
 
 msgid "Activation key configuration"
-msgstr "Configuration de la clé d'activation"
+msgstr "Contenu Clé d'activation"
 
 msgid "Add and manage compute resources (virtualization and cloud)"
-msgstr "Ajoute et gère les ressources d'ordinateur (virtualisation et cloud)"
+msgstr "Ajouter et gérer des ressources informatiques (virtualisation et cloud)"
 
 msgid "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
-msgstr "Tous les composants nécessaires ont été configurés pour supporter le provisioning. Vous pouvez maintenant déployer de nouveaux hôtes en les enregistrant dans la page Hôtes. Puis, faites un démarrage PXE de l'hôte sur le sous réseau défini précédemment."
+msgstr "Tous les composants nécessaires ont été configurés pour le support du provisionnement.  Vous pouvez maintenant provisionner de nouveaux hôtes en les enregistrant à partir de la page Hôtes, puis démarrer le serveur par PXE sur le sous-réseau configuré précédemment."
 
 msgid "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
-msgstr "Toutes les informations nécessaires du réseau ont été collectées. Lancez de nouveau l'installateur de Foreman avec les arguments adéquats pour configurer le provisioning."
+msgstr "Toutes les informations réseau nécessaires ont été collectées, exécutez à nouveau le programme d'installation de Foreman avec les arguments nécessaires pour configurer le provisionnement."
 
 msgid "Completion"
-msgstr "Complétion"
+msgstr "Achèvement"
 
 msgid "Compute Resources"
-msgstr "Ressources d'Ordinateur"
+msgstr "Ressources Compute"
 
 msgid "Create and provision a new host"
-msgstr "Créer et provisionner un nouvel hôte"
+msgstr "Créer et approvisionner un nouvel hôte"
 
 msgid "Create new installation medium"
-msgstr "Créer un nouveau media d'installation"
+msgstr "Créer un support d'installation"
 
 msgid "Delete %s?"
-msgstr "Supprimer %s ?"
+msgstr "Supprimer %s?"
 
 msgid "Domain"
 msgstr "Domaine"
 
 msgid "Domain|Name"
-msgstr "Nom de domaine"
+msgstr "Nom"
 
 msgid "Edit Host Group"
-msgstr "Éditer un groupe d'hôtes"
+msgstr "Modifier Groupe Hôte"
 
 msgid "Existing medium"
-msgstr "Medium existant"
+msgstr "Moyen existant"
 
 msgid "Foreman installer"
-msgstr "l'installateur Foreman"
+msgstr "Contremaître installateur"
 
 msgid "Found registered host %s"
-msgstr "L'hôte enregistré %s a été trouvé"
+msgstr "Trouvé l'hôte enregistré %s"
 
 msgid "Found registered smart proxy %s"
-msgstr "Le smart proxy enregistré %s a été trouvé"
+msgstr "Trouvé smart proxy enregistré %s"
 
 msgid "Host %s has at least one network interface"
 msgstr "L'hôte %s possède au moins une interface réseau"
@@ -76,22 +77,22 @@ msgid "Hostname"
 msgstr "Nom d'hôte"
 
 msgid "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
-msgstr "Si un medium d'installation a déjà été configuré, ce dernier peut être choisi ci-dessous et l'assistant va compléter les associations nécessaires. Autrement, utiliser les champs suivants ou la page de gestion des media dans Foreman pour ajouter un nouveau medium."
+msgstr "Si le support d'installation a déjà été configuré, il peut être sélectionné ci-dessous et l'assistant effectuera les associations nécessaires.  Sinon, utilisez les champs ci-dessous ou la page Supports d'installation de Foreman pour ajouter de nouveaux supports."
 
 msgid "Install provisioning with DHCP"
-msgstr "Installation du provisioning avec du DHCP"
+msgstr "Installation du provisionnement avec DHCP"
 
 msgid "Install provisioning without DHCP"
-msgstr "Installation du provisioning sans DHCP"
+msgstr "Installer le provisionnement sans DHCP"
 
 msgid "Installation media"
 msgstr "Média d'installation"
 
 msgid "Missing registered host %s, please ensure it is checking in"
-msgstr "Hôte enregistré introuvable, merci de vérifier que l'hôte est enregistré"
+msgstr "Il manque l'hôte enregistré %s, veuillez vous assurer qu'il est enregistré"
 
 msgid "Missing registered smart proxy %s, please ensure it is registered"
-msgstr "Smart proxy enregistré %s introuvable, merci de vérifier que le smart proxy est enregistré "
+msgstr "Il manque le proxy intelligent enregistré %s, veuillez vous assurer qu'il est enregistré"
 
 msgid "Network config"
 msgstr "Configuration du réseau"
@@ -100,22 +101,22 @@ msgid "Network selection"
 msgstr "Sélection du réseau"
 
 msgid "New Host"
-msgstr "Nouvel hôte"
+msgstr "Nouveaux hôtes"
 
 msgid "Next"
 msgstr "Suivant"
 
 msgid "Next steps"
-msgstr "Etapes suivantes"
+msgstr "Prochaines étapes"
 
 msgid "No network interfaces listed in $interfaces fact"
-msgstr "Aucune interface réseau présente dans le fact $interfaces"
+msgstr "Aucune interface réseau répertoriée dans $interfaces fact"
 
 msgid "Normal installation media"
-msgstr "Media d'installation normal"
+msgstr "Média d'installation"
 
 msgid "Not available until pre-requisites satisified."
-msgstr "Non disponible tant que les prérequis ne sont pas satisfaits."
+msgstr "Non disponible tant que les pré-requis ne sont pas satisfaits."
 
 msgid "Operating system"
 msgstr "Système d'exploitation"
@@ -124,79 +125,79 @@ msgid "Path or URL"
 msgstr "Chemin ou URL"
 
 msgid "Plugin for Foreman that helps set up provisioning."
-msgstr "Plugin de Foreman pour aider à la mise en place du provisioning."
+msgstr "Plugin pour Foreman qui aide à mettre en place le provisionnement."
 
 msgid "Pre-requisites"
-msgstr "Prérequis"
+msgstr "Pré-requis"
 
 msgid "Provision from %s"
-msgstr "Provisionne depuis %s"
+msgstr "Provisionner %s"
 
 msgid "Provisioning Setup"
 msgstr "Configuration du provisioning"
 
 msgid "Provisioning host"
-msgstr "Hôte pour le provisioning"
+msgstr "Provisioning uniquement"
 
 msgid "Provisioning network"
-msgstr "Réseau du provisioning "
+msgstr "Provisioning uniquement"
 
 msgid "Provisioning setup"
 msgstr "Configuration du provisioning"
 
 msgid "Provisioning setup complete"
-msgstr "Configuration du provisioning terminée"
+msgstr "Configuration du provisioning"
 
 msgid "Red Hat Satellite 5 or Spacewalk"
 msgstr "Red Hat Satellite 5 ou Spacewalk"
 
 msgid "Return to the main provisioning setup page"
-msgstr "Retour à la page principale de configuration du provisioning"
+msgstr "Retour à la page principale de configuration du provisionnement"
 
 msgid "Review and edit the host group set up by the provisioning wizard"
-msgstr "Consulter et éditer le groupe d'hôtes configuré par l'assistant du provisioning"
+msgstr "Revoir et modifier le groupe d'hôtes mis en place par l'assistant de provisionnement"
 
 msgid "Set up provisioning"
-msgstr "Configurer le provisioning"
+msgstr "Provisioning automatique"
 
 msgid "Smart proxy"
 msgstr "Smart proxy"
 
 msgid "Some information about the location of installation media for the operating system used for provisioning is now required."
-msgstr "Quelques informations sont maintenant requises à propos de l'emplacement du media d'installation pour le système d'exploitation utilisé pour le provisioning."
+msgstr "Certaines informations sur l'emplacement du support d'installation du système d'exploitation utilisé pour le provisionnement sont maintenant requises."
 
 msgid "Spacewalk hostname is missing"
-msgstr "Le nom d'hôte Spacewalk manquant"
+msgstr "Le nom d'hôte de Spacewalk est manquant"
 
 msgid "Subnet"
-msgstr "Sous-Réseau"
+msgstr "Sous-réseau"
 
 msgid "Successfully associated OS %s."
-msgstr "Succès de l'association de l'OS %s."
+msgstr "A réussi à associer OS %s."
 
 msgid "Successfully updated subnet %s."
-msgstr "Succès de la mise à jour du sous réseau %s."
+msgstr "Mise à jour du sous-réseau %s réussie."
 
 msgid "The DNS domain name to provision hosts into"
-msgstr "Le nom de domaine DNS utilisé pour le provisionnement d'hotes"
+msgstr "Le nom de domaine DNS pour provisionner les hôtes"
 
 msgid "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
-msgstr "La configuration mise en place est accessible depuis le menu Infrastructure (par ex.: Infrastructure > Sous Réseaux) et peut être modifié depuis l'interface Web. Vous pouvez relancer ce processus de configuration par le menu <b>Infrastructure > Configuration du provisioning</b> pour changer des options ou ajouter de nouvelles fonctions de provisioning."
+msgstr "La configuration mise en place est accessible dans le menu Infrastructure, par exemple Infrastructure > Subnets, et peut être modifiée dans l'interface Web.  Vous pouvez revenir à ce processus de configuration via <b>Infrastructure > Provisioning Setup</b> pour modifier les paramètres ou ajouter de nouvelles capacités de provisionnement."
 
 msgid "The following operating system will be configured for provisioning:"
-msgstr "Le système d'exploitation suivant va être configuré pour le provisioning :"
+msgstr "Le système d'exploitation suivant sera configuré pour le provisionnement :"
 
 msgid "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
-msgstr "Cet assistant va vous aider à configurer Foreman pour une automatisation complète des installations d'hotes. Avant de commencer, quelques prérequis doivent être vérifiés."
+msgstr "Cet assistant vous aidera à configurer Foreman pour le provisionnement complet des hôtes.  Avant de commencer, quelques exigences seront vérifiées."
 
 msgid "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
-msgstr "Pour le provisioning des hôtes, quelques valeurs de configuration sont nécessaires pour le sous réseau de provisioning rattaché au serveur Foreman."
+msgstr "Pour provisionner les hôtes, certaines valeurs de configuration sont nécessaires pour le sous-réseau de provisionnement attaché au serveur Foreman."
 
 msgid "Type"
 msgstr "Type"
 
 msgid "Use an existing installation medium"
-msgstr "Utiliser un medium d'installation existant"
+msgstr "Utiliser un support d'installation existant"
 
 msgid "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
-msgstr "Les utilisateurs de Spacewalk, Red Hat Network, ou Red Hat Satellite 5 doivent entrer une clé d'activation ci-dessous. Autrement, laisser le champ blanc."
+msgstr "Les utilisateurs de Spacewalk, Red Hat Network ou Red Hat Satellite 5 doivent saisir une clé d'activation appropriée ci-dessous, sinon ne rien saisir."
