--- a/locale/de/foreman_setup.po
+++ b/locale/de/foreman_setup.po
@@ -7,10 +7,10 @@
 # Ettore Atalan <atalanttore@googlemail.com>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 7.0.0\n"
+"Project-Id-Version: foreman_setup 8.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2017-09-20 10:08+0000\n"
-"Last-Translator: Christina Gurski <Gurski_christina@yahoo.de>\n"
+"PO-Revision-Date: 2014-08-20 08:30+0000\n"
+"Last-Translator: Christina Gurski <Gurski_christina@yahoo.de>, 2015\n"
 "Language-Team: German (http://www.transifex.com/foreman/foreman/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
