--- a/locale/en_GB/foreman_setup.po
+++ b/locale/en_GB/foreman_setup.po
@@ -7,10 +7,10 @@
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 7.0.0\n"
+"Project-Id-Version: foreman_setup 8.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2017-10-12 21:21+0000\n"
-"Last-Translator: Andi Chandler <andi@gowling.com>\n"
+"PO-Revision-Date: 2014-08-20 08:30+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>, 2015\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/foreman/fore"
 "man/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
