--- a/locale/ka/foreman_setup.po
+++ b/locale/ka/foreman_setup.po
@@ -5,7 +5,7 @@
 # Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: Foreman\n"
+"Project-Id-Version: foreman_setup 8.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2014-08-20 08:30+0000\n"
 "Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
