--- a/locale/sv_SE/foreman_setup.po
+++ b/locale/sv_SE/foreman_setup.po
@@ -6,10 +6,10 @@
 # johnny.westerlund <johnny.westerlund@gmail.com>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 7.0.0\n"
+"Project-Id-Version: foreman_setup 8.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2017-09-20 10:08+0000\n"
-"Last-Translator: johnny.westerlund <johnny.westerlund@gmail.com>\n"
+"PO-Revision-Date: 2014-08-20 08:30+0000\n"
+"Last-Translator: johnny.westerlund <johnny.westerlund@gmail.com>, 2014\n"
 "Language-Team: Swedish (Sweden) (http://www.transifex.com/foreman/foreman/lang"
 "uage/sv_SE/)\n"
 "MIME-Version: 1.0\n"
